# rio

./: .gitignore  .tool-versions  CLAUDE.md  Makefile  README.md  mix.exs
assets/css/: app.css  mind_map.css
assets/js/: app.js
config/: config.exs  desktop.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: mind_mapper_poc.ex  mind_mapper_poc_web.ex  rio.ex  rio_web.ex  work_tree.ex  work_tree_web.ex
lib/mind_mapper_poc/: application.ex  mailer.ex  repo.ex
lib/mind_mapper_poc/mind_maps/: attachment.ex  layout.ex  mind_maps.ex  node.ex  tree.ex
lib/mind_mapper_poc_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/mind_mapper_poc_web/components/: core_components.ex  layouts.ex
lib/mind_mapper_poc_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  (+1 more)
lib/rio/: application.ex  auto_archiver.ex  fuzzy_search.ex  mailer.ex  repo.ex
lib/rio_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/work_tree/: application.ex  auto_archiver.ex  db.ex  fuzzy_search.ex  mailer.ex  repo.ex
lib/work_tree_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
native/app-bundle/: Info.plist  RioMenuBar.swift  WorkTreeMenuBar.swift  icon.icns  launcher
native/electron/: loading.html  main.js  package-lock.json  package.json  preload.js
native/scripts/: run-phoenix.sh
native/src-tauri/: Cargo.toml  tauri.conf.json
native/src-tauri/capabilities/: default.json
native/src-tauri/icons/: icon.icns
native/src-tauri/src/: lib.rs  main.rs
priv/repo/: seeds.exs
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex
(+166 files in other folders)
